Almost all tests working